--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -12,31 +12,31 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-10-28 Mon 19:10]
+#+CAPTION: Clock summary at [2019-10-29 Tue 08:37]
 | <75>                                                      |         |       |       |       |
 | Headline                                                  | Time    |       |       |     % |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                              | *48:16* |       |       | 100.0 |
+| *Total time*                                              | *48:52* |       |       | 100.0 |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                   | 48:16   |       |       | 100.0 |
-| Active                                                    |         | 48:16 |       | 100.0 |
-| Edit release notes for previous sprint                    |         |       |  3:36 |   7.5 |
+| Stories                                                   | 48:52   |       |       | 100.0 |
+| Active                                                    |         | 48:52 |       | 100.0 |
+| Edit release notes for previous sprint                    |         |       |  3:36 |   7.4 |
 | Create a demo and presentation for previous sprint        |         |       |  1:39 |   3.4 |
-| Sprint and product backlog grooming                       |         |       |  3:30 |   7.3 |
+| Sprint and product backlog grooming                       |         |       |  4:06 |   8.4 |
 | Remove test model sanitizer                               |         |       |  0:20 |   0.7 |
 | Remove master headers                                     |         |       |  1:12 |   2.5 |
-| Fix the issues with tests in reference model              |         |       |  3:53 |   8.0 |
+| Fix the issues with tests in reference model              |         |       |  3:53 |   7.9 |
 | Update static strings to string views                     |         |       |  1:15 |   2.6 |
-| ODB include directories is incorrect                      |         |       |  1:43 |   3.6 |
-| Create a "modeling" report                                |         |       |  4:56 |  10.2 |
+| ODB include directories is incorrect                      |         |       |  1:43 |   3.5 |
+| Create a "modeling" report                                |         |       |  4:56 |  10.1 |
 | Move visual studio related options to top profile         |         |       |  0:17 |   0.6 |
 | Fix incorrect message keyword when detecting ODB includes |         |       |  0:29 |   1.0 |
-| Move registrar into assets                                |         |       |  5:29 |  11.4 |
+| Move registrar into assets                                |         |       |  5:29 |  11.2 |
 | Fix compilation errors in nightly                         |         |       |  0:24 |   0.8 |
-| Upgrade to boost 1.70                                     |         |       | 10:00 |  20.7 |
-| Setup laptop to work on dogen                             |         |       |  0:45 |   1.6 |
-| Org-mode as a carrier format for modeling                 |         |       |  5:37 |  11.6 |
-| Add relational tracing support                            |         |       |  3:11 |   6.6 |
+| Upgrade to boost 1.70                                     |         |       | 10:00 |  20.5 |
+| Setup laptop to work on dogen                             |         |       |  0:45 |   1.5 |
+| Org-mode as a carrier format for modeling                 |         |       |  5:37 |  11.5 |
+| Add relational tracing support                            |         |       |  3:11 |   6.5 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -214,6 +214,7 @@ Time spent creating the demo and presentation.
 
 *** STARTED Sprint and product backlog grooming                       :story:
     :LOGBOOK:
+    CLOCK: [2019-10-29 Tue 08:01]--[2019-10-29 Tue 08:37] =>  0:36
     CLOCK: [2019-10-28 Mon 17:40]--[2019-10-28 Mon 17:44] =>  0:04
     CLOCK: [2019-10-28 Mon 08:53]--[2019-10-28 Mon 08:58] =>  0:05
     CLOCK: [2019-10-27 Sun 12:41]--[2019-10-27 Sun 12:56] =>  0:15
