--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -12,17 +12,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-11-04 Mon 23:16]
+#+CAPTION: Clock summary at [2019-11-04 Mon 23:30]
 | <75>                                                      |         |       |       |       |
 | Headline                                                  | Time    |       |       |     % |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                              | *57:11* |       |       | 100.0 |
+| *Total time*                                              | *57:24* |       |       | 100.0 |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                   | 57:11   |       |       | 100.0 |
-| Active                                                    |         | 57:11 |       | 100.0 |
+| Stories                                                   | 57:24   |       |       | 100.0 |
+| Active                                                    |         | 57:24 |       | 100.0 |
 | Edit release notes for previous sprint                    |         |       |  3:36 |   6.3 |
 | Create a demo and presentation for previous sprint        |         |       |  1:39 |   2.9 |
-| Sprint and product backlog grooming                       |         |       |  4:23 |   7.7 |
+| Sprint and product backlog grooming                       |         |       |  4:23 |   7.6 |
 | Remove test model sanitizer                               |         |       |  0:20 |   0.6 |
 | Remove master headers                                     |         |       |  1:12 |   2.1 |
 | Fix the issues with tests in reference model              |         |       |  3:53 |   6.8 |
@@ -32,14 +32,15 @@
 | Move visual studio related options to top profile         |         |       |  0:17 |   0.5 |
 | Fix incorrect message keyword when detecting ODB includes |         |       |  0:29 |   0.8 |
 | Meta-data keys are in the inverse order                   |         |       |  0:39 |   1.1 |
-| Creating reference cycles produces strange errors         |         |       |  5:32 |   9.7 |
+| Creating reference cycles produces strange errors         |         |       |  5:32 |   9.6 |
+| Error on duplicate references                             |         |       |  0:24 |   0.7 |
 | Move registrar into assets                                |         |       |  5:29 |   9.6 |
 | Fix compilation errors in nightly                         |         |       |  0:24 |   0.7 |
-| Upgrade to boost 1.70                                     |         |       | 10:00 |  17.5 |
+| Upgrade to boost 1.70                                     |         |       | 10:00 |  17.4 |
 | Setup laptop to work on dogen                             |         |       |  0:45 |   1.3 |
 | Org-mode as a carrier format for modeling                 |         |       |  5:37 |   9.8 |
 | Add relational tracing support                            |         |       |  4:48 |   8.4 |
-| Error on duplicate references                             |         |       |  0:14 |   0.4 |
+| Generate model dependency graph                           |         |       |  0:03 |   0.1 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -597,6 +598,19 @@ Problems:
 
 - references seem to have been processed in reverse order.
 
+*** COMPLETED Error on duplicate references                           :story:
+    CLOSED: [2019-11-04 Mon 23:21]
+    :LOGBOOK:
+    CLOCK: [2019-11-04 Mon 23:25]--[2019-11-04 Mon 23:30] =>  0:05
+    CLOCK: [2019-11-04 Mon 23:16]--[2019-11-04 Mon 23:21] =>  0:05
+    CLOCK: [2019-11-04 Mon 23:01]--[2019-11-04 Mon 23:15] =>  0:14
+    :END:
+
+We need to check to see what happens if you enter the same reference
+multiple times. We should error.
+
+We should also detect references to "self".
+
 *** STARTED Move registrar into assets                                :story:
     :LOGBOOK:
     CLOCK: [2019-10-24 Thu 08:20]--[2019-10-24 Thu 08:43] =>  0:23
@@ -932,13 +946,13 @@ start and end of this transform?"
 Interestingly, this would also allow us to compare things between
 runs. The schema should be designed with this in mind.
 
-*** STARTED Error on duplicate references                             :story:
+*** STARTED Generate model dependency graph                           :story:
     :LOGBOOK:
-    CLOCK: [2019-11-04 Mon 23:01]--[2019-11-04 Mon 23:15] =>  0:14
+    CLOCK: [2019-11-04 Mon 23:22]--[2019-11-04 Mon 23:25] =>  0:03
     :END:
 
-We need to check to see what happens if you enter the same reference
-multiple times. We should error.
+It would be nice to generate a tracing of the model dependencies. This
+may not necessarily be part of tracing.
 
 *** Make the building of the relational model conditional             :story:
 
