--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -12,35 +12,35 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-11-04 Mon 23:40]
+#+CAPTION: Clock summary at [2019-11-05 Tue 08:32]
 | <75>                                                      |         |       |       |       |
 | Headline                                                  | Time    |       |       |     % |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                              | *57:32* |       |       | 100.0 |
+| *Total time*                                              | *58:17* |       |       | 100.0 |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                   | 57:32   |       |       | 100.0 |
-| Active                                                    |         | 57:32 |       | 100.0 |
-| Edit release notes for previous sprint                    |         |       |  3:36 |   6.3 |
-| Create a demo and presentation for previous sprint        |         |       |  1:39 |   2.9 |
-| Sprint and product backlog grooming                       |         |       |  4:23 |   7.6 |
+| Stories                                                   | 58:17   |       |       | 100.0 |
+| Active                                                    |         | 58:17 |       | 100.0 |
+| Edit release notes for previous sprint                    |         |       |  3:36 |   6.2 |
+| Create a demo and presentation for previous sprint        |         |       |  1:39 |   2.8 |
+| Sprint and product backlog grooming                       |         |       |  4:23 |   7.5 |
 | Remove test model sanitizer                               |         |       |  0:20 |   0.6 |
 | Remove master headers                                     |         |       |  1:12 |   2.1 |
 | Fix the issues with tests in reference model              |         |       |  3:53 |   6.7 |
-| Update static strings to string views                     |         |       |  1:15 |   2.2 |
-| ODB include directories is incorrect                      |         |       |  1:43 |   3.0 |
-| Create a "modeling" report                                |         |       |  4:56 |   8.6 |
+| Update static strings to string views                     |         |       |  1:15 |   2.1 |
+| ODB include directories is incorrect                      |         |       |  1:43 |   2.9 |
+| Create a "modeling" report                                |         |       |  4:56 |   8.5 |
 | Move visual studio related options to top profile         |         |       |  0:17 |   0.5 |
 | Fix incorrect message keyword when detecting ODB includes |         |       |  0:29 |   0.8 |
 | Meta-data keys are in the inverse order                   |         |       |  0:39 |   1.1 |
-| Creating reference cycles produces strange errors         |         |       |  5:32 |   9.6 |
-| Error on duplicate references                             |         |       |  0:26 |   0.8 |
-| Move registrar into assets                                |         |       |  5:29 |   9.5 |
+| Creating reference cycles produces strange errors         |         |       |  5:32 |   9.5 |
+| Error on duplicate references                             |         |       |  0:26 |   0.7 |
+| Move registrar into assets                                |         |       |  5:29 |   9.4 |
 | Fix compilation errors in nightly                         |         |       |  0:24 |   0.7 |
-| Upgrade to boost 1.70                                     |         |       | 10:00 |  17.4 |
+| Upgrade to boost 1.70                                     |         |       | 10:00 |  17.2 |
 | Setup laptop to work on dogen                             |         |       |  0:45 |   1.3 |
-| Org-mode as a carrier format for modeling                 |         |       |  5:37 |   9.8 |
-| Add relational tracing support                            |         |       |  4:48 |   8.3 |
-| Generate model dependency graph                           |         |       |  0:09 |   0.3 |
+| Org-mode as a carrier format for modeling                 |         |       |  5:37 |   9.6 |
+| Add relational tracing support                            |         |       |  4:48 |   8.2 |
+| Generate model dependency graph                           |         |       |  0:54 |   1.5 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -948,6 +948,8 @@ runs. The schema should be designed with this in mind.
 
 *** STARTED Generate model dependency graph                           :story:
     :LOGBOOK:
+    CLOCK: [2019-11-05 Tue 08:00]--[2019-11-05 Tue 08:31] =>  0:31
+    CLOCK: [2019-11-04 Mon 23:40]--[2019-11-04 Mon 23:54] =>  0:14
     CLOCK: [2019-11-04 Mon 23:33]--[2019-11-04 Mon 23:39] =>  0:06
     CLOCK: [2019-11-04 Mon 23:22]--[2019-11-04 Mon 23:25] =>  0:03
     :END:
