--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -12,35 +12,37 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-11-05 Tue 18:30]
+#+CAPTION: Clock summary at [2019-11-05 Tue 22:17]
 | <75>                                                      |         |       |       |       |
 | Headline                                                  | Time    |       |       |     % |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                              | *59:18* |       |       | 100.0 |
+| *Total time*                                              | *60:05* |       |       | 100.0 |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                   | 59:18   |       |       | 100.0 |
-| Active                                                    |         | 59:18 |       | 100.0 |
-| Edit release notes for previous sprint                    |         |       |  3:36 |   6.1 |
-| Create a demo and presentation for previous sprint        |         |       |  1:39 |   2.8 |
-| Sprint and product backlog grooming                       |         |       |  4:23 |   7.4 |
+| Stories                                                   | 60:05   |       |       | 100.0 |
+| Active                                                    |         | 60:05 |       | 100.0 |
+| Edit release notes for previous sprint                    |         |       |  3:36 |   6.0 |
+| Create a demo and presentation for previous sprint        |         |       |  1:39 |   2.7 |
+| Time spent producing coding videos                        |         |       |  0:30 |   0.8 |
+| Sprint and product backlog grooming                       |         |       |  4:23 |   7.3 |
 | Remove test model sanitizer                               |         |       |  0:20 |   0.6 |
 | Remove master headers                                     |         |       |  1:12 |   2.0 |
 | Fix the issues with tests in reference model              |         |       |  3:53 |   6.5 |
 | Update static strings to string views                     |         |       |  1:15 |   2.1 |
 | ODB include directories is incorrect                      |         |       |  1:43 |   2.9 |
-| Create a "modeling" report                                |         |       |  4:56 |   8.3 |
+| Create a "modeling" report                                |         |       |  4:56 |   8.2 |
 | Move visual studio related options to top profile         |         |       |  0:17 |   0.5 |
 | Fix incorrect message keyword when detecting ODB includes |         |       |  0:29 |   0.8 |
 | Meta-data keys are in the inverse order                   |         |       |  0:39 |   1.1 |
-| Creating reference cycles produces strange errors         |         |       |  5:32 |   9.3 |
+| Creating reference cycles produces strange errors         |         |       |  5:32 |   9.2 |
 | Error on duplicate references                             |         |       |  0:26 |   0.7 |
 | Generate model dependency graph                           |         |       |  1:55 |   3.2 |
-| Move registrar into assets                                |         |       |  5:29 |   9.2 |
+| Move registrar into assets                                |         |       |  5:29 |   9.1 |
 | Fix compilation errors in nightly                         |         |       |  0:24 |   0.7 |
-| Upgrade to boost 1.70                                     |         |       | 10:00 |  16.9 |
-| Setup laptop to work on dogen                             |         |       |  0:45 |   1.3 |
-| Org-mode as a carrier format for modeling                 |         |       |  5:37 |   9.5 |
-| Add relational tracing support                            |         |       |  4:48 |   8.1 |
+| Upgrade to boost 1.70                                     |         |       | 10:00 |  16.6 |
+| Setup laptop to work on dogen                             |         |       |  0:45 |   1.2 |
+| Org-mode as a carrier format for modeling                 |         |       |  5:37 |   9.3 |
+| Add relational tracing support                            |         |       |  4:48 |   8.0 |
+| Make the building of the relational model conditional     |         |       |  0:17 |   0.5 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -215,6 +217,14 @@ Happy Modeling!
     :END:
 
 Time spent creating the demo and presentation.
+
+*** STARTED Time spent producing coding videos                        :story:
+    :LOGBOOK:
+    CLOCK: [2019-11-05 Tue 21:30]--[2019-11-05 Tue 22:00] =>  0:30
+    :END:
+
+Story that captures time spent producing coding videos but not
+actually doing any development related activities.
 
 *** STARTED Sprint and product backlog grooming                       :story:
     :LOGBOOK:
@@ -961,7 +971,11 @@ start and end of this transform?"
 Interestingly, this would also allow us to compare things between
 runs. The schema should be designed with this in mind.
 
-*** Make the building of the relational model conditional             :story:
+*** STARTED Make the building of the relational model conditional     :story:
+    :LOGBOOK:
+    CLOCK: [2019-11-05 Tue 22:01]--[2019-11-05 Tue 22:17] =>  0:16
+    CLOCK: [2019-11-05 Tue 21:59]--[2019-11-05 Tue 22:00] =>  0:01
+    :END:
 
 We should only build the relational model if ODB support is
 present. Otherwise we should ignore this model. Dogen should still
